# Copyright © 2019 Intel Corporation
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

_test_progs = [
  'pAllocColor',
  'pAllocColorCells',
  'pAllocColorPlanes',
  'pAllocNamedColor',
  'pAllowEvents',
  'pBadRequest',
  'pBell',
  'pChangeActivePointerGrab',
  'pChangeGC',
  'pChangeHosts',
  'pChangeKeyboardControl',
  'pChangeKeyboardMapping',
  'pChangePointerControl',
  'pChangeProperty',
  'pChangeSaveSet',
  'pChangeWindowAttributes',
  'pClearArea',
  'pCloseFont',
  'pConfigureWindow',
  'pConvertSelection',
  'pCopyArea',
  'pCopyColormapAndFree',
  'pCopyGC',
  'pCopyPlane',
  'pCirculateWindow',
  'pCreateColormap',
  'pCreateCursor',
  'pCreateGC',
  'pCreateGlyphCursor',
  'pCreatePixmap',
  'pCreateWindow',
  'pDeleteProperty',
  'pDestroySubwindows',
  'pDestroyWindow',
  'pFillPoly',
  'pFreeColormap',
  'pFreeColors',
  'pFreeCursor',
  'pForceScreenSaver',
  'pFreeGC',
  'pFreePixmap',
  'pGrabButton',
  'pGrabKey',
  'pGrabKeyboard',
  'pGrabPointer',
  'pGrabServer',
  'pGetAtomName',
  'pGetFontPath',
  'pGetGeometry',
  'pGetImage',
  'pGetInputFocus',
  'pGetKeyboardControl',
  'pGetKeyboardMapping',
  'pGetModifierMapping',
  'pGetMotionEvents',
  'pGetPointerControl',
  'pGetPointerMapping',
  'pGetProperty',
  'pGetScreenSaver',
  'pGetSelectionOwner',
  'pGetWindowAttributes',
  'pImageText16',
  'pImageText8',
  'pInstallColormap',
  'pInternAtom',
  'pKillClient',
  'pLookupColor',
  'pListExtensions',
  'pListFonts',
  'pListFontsWithInfo',
  'pListHosts',
  'pListInstalledColormaps',
  'pListProperties',
  'pMapSubwindows',
  'pMapWindow',
  'pNoOperation',
  'pOpenDisplay',
  'pOpenFont',
  'pPolyArc',
  'pPolyFillArc',
  'pPolyFillRectangle',
  'pPolyLine',
  'pPolyPoint',
  'pPolyRectangle',
  'pPolySegment',
  'pPolyText16',
  'pPolyText8',
  'pPutImage',
  'pQueryBestSize',
  'pQueryColors',
  'pQueryExtension',
  'pQueryFont',
  'pQueryKeymap',
  'pQueryPointer',
  'pQueryTree',
  'pQueryTextExtents',
  'pRecolorCursor',
  'pReparentWindow',
  'pRotateProperties',
  'pSendEvent',
  'pSetAccessControl',
  'pSetClipRectangles',
  'pSetCloseDownMode',
  'pSetDashes',
  'pSetFontPath',
  'pSetInputFocus',
  'pSetModifierMapping',
  'pSetPointerMapping',
  'pStoreColors',
  'pStoreNamedColor',
  'pSetScreenSaver',
  'pSetSelectionOwner',
  'pTranslateCoords',
  'pUngrabButton',
  'pUngrabKey',
  'pUngrabKeyboard',
  'pUngrabPointer',
  'pUngrabServer',
  'pUnmapSubwindows',
  'pUnmapWindow',
  'pUninstallColormap',
  'pWarpPointer',
]

foreach t : _test_progs
  executable(
    t,
    [gen_mc.process(t + '.m')],
    include_directories : [inc_include, inc_tet3, inc_xts5],
    link_with : [libxts5proto, libxts5, libapi_s],
    dependencies : [deps_xts, idep_tcmmain],
    install_rpath : '..',
    install_dir : join_paths(get_option('libexecdir'), 'xts5', 'Xproto'),
    install : true,
  )
endforeach
